Swtich component-start to padding Remove margin. Removes/Fixes horizontal scroll bar

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -476,7 +476,7 @@ p.lead.mt-2 {
 }
 
 .component-start {
-  margin-left: 65px;
+  padding-left: 65px;
 
   @include nav-menu-desktop {
     margin-left: 5px;
